# ROS

./: .gitignore  Cargo.toml  LICENSE  README.md  info.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/riggr-agent/: Cargo.toml  build.rs
apps/riggr-agent/src/: main.rs
apps/riggr-cli/: Cargo.toml
apps/riggr-cli/src/: main.rs
apps/riggr-ui/: README.md  index.html  package.json
apps/riggr-ui/src/: main.tsx
apps/riggr-ui/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/riggr-ui/src-tauri/src/: main.rs
apps/riggr-ui/src/app/: App.tsx
apps/riggr-ui/src/lib/: mockData.ts  types.ts
apps/riggr-ui/src/lib/api/: client.ts  proto.ts
apps/riggr-ui/src/pages/: Dashboard.tsx  Graph.tsx  Launches.tsx  Logs.tsx  Profiles.tsx
apps/riggr-ui/src/styles/: global.css
docs/: README.md  architecture.md  phases.md  vision.md
docs/api/: grpc.md  schemas.md
docs/decisions/: adr-0001-ui-tauri.md  adr-0002-agent-rust.md  adr-0003-ros-adapter-process.md
proto/riggr/: agent.proto  common.proto  launch.proto  logs.proto  ros.proto
scripts/ci/: build-linux.sh  build-macos.sh  build-windows.ps1
scripts/dev/: bootstrap.sh  run-agent.sh
services/ros-adapter/: README.md
services/ros-adapter/src/: main.cpp
