[package]
name = "riggr-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"
